--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
         body {
             font-family: 'Poppins', sans-serif;
            
-            background-image: url('gambar/pemandangan_Jepang.jpg'); 
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+            background-color: #5276aa;
             margin: 0;
             padding: 0;
+            transition: background-color 0.5s ease;
         }
 
        
@@ -123,4 +120,5 @@
         </div>
     </div>
 </body>
+
 </html>
