--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </h1>
         
         <div class="flex flex-col items-center mb-8">
-            <img src="gambar/Phasphoto ridho.png" alt="Foto Profil" class="w-28 h-28 md:w-36 md:h-36 rounded-full border-4 border-indigo-500 shadow-xl mb-4 transform transition-transform duration-300 hover:scale-105 object-cover">
+            <img src="gambar/phasphoto_ridho.png" alt="Foto Profil" class="w-28 h-28 md:w-36 md:h-36 rounded-full border-4 border-indigo-500 shadow-xl mb-4 transform transition-transform duration-300 hover:scale-105 object-cover">
             <h2 class="text-2xl md:text-3xl font-bold text-gray-900">Ridho Wiliam Pat</h2>
             <p class="text-md text-indigo-600 font-medium">Mahasiswa Ahli Jenjang</p>
         </div>
@@ -122,3 +122,4 @@
 </body>
 
 </html>
+
